tests/valid/definite/IntOp_Valid_1.whiley
void System::main([string] args):
     x = 112233445566778899
     out->println(str(x))
     x = x + 1
     out->println(str(x))
     x = x - 556
     out->println(str(x))
     x = x * 123
     out->println(str(x))
     x = x / 2
     out->println(str(x))
