tests/invalid/simple/RealDiv_CompileFail_1.whiley
void System::main([string] args):
    int x
    x = 2.0 / 1
